--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
     </nav>
 
     <div class="container">
-        <form method="post" action="/login" class="login-form">
+        <form method="post" action="/api/auth/login" class="login-form">
             <div class="form-group">
                 <input type="text" name="username" placeholder="Username" required class="form-control" />
             </div>
