--- a/templates/files.html
+++ b/templates/files.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
   </head>
   <body>
     <nav class="nav-bar">
@@ -23,6 +24,9 @@
         <div class="nav-buttons">
             <a href="/" class="icon-btn" title="Home">
                 <i class="fas fa-home"></i>
+            </a>
+            <a href="/search" class="icon-btn" title="Search">
+                <i class="fas fa-search"></i>
             </a>
             <a href="/files" class="icon-btn" title="View Files">
                 <i class="fas fa-folder-open"></i>
@@ -58,7 +62,7 @@
 
     <!-- Logs Panel -->
     <div id="logsPanel" class="logs-panel collapsed">
-      <div class="logs-panel-header" onclick="toggleLogs()">
+      <div class="logs-panel-header">
         <h2>API Logs</h2>
         <button class="toggle-logs-btn">
           <i class="fas fa-chevron-up"></i>
@@ -82,6 +86,7 @@
       </div>
     </div>
 
+    <script src="/static/logs.js"></script>
     <script src="/static/files.js"></script>
     <script src="/static/scripts.js"></script>
   </body>
