fixes on logs, upload

--- a/templates/search.html
+++ b/templates/search.html
@@ -36,7 +36,7 @@
             <a href="/upload" class="icon-btn" title="Upload">
                 <i class="fas fa-upload"></i>
             </a>
-            <button onclick="window.location.href='/logout'" class="icon-btn" title="Logout">
+            <button onclick="window.location.href='/api/auth/logout'" class="icon-btn" title="Logout">
                 <i class="fas fa-sign-out-alt"></i>
             </button>
         </div>
