--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
     </nav>
 
     <div class="container">
-        <form method="post" action="/api/auth/login" class="login-form">
+        <form method="post" action="/login" class="login-form">
             <h2 class="login-title">Login</h2>
             <div class="form-group">
                 <input type="text" name="username" placeholder="Username" required class="form-control" />
